# FedMamba-SALT

./: .gitignore  2205.08576v2 (pdf.io).md  ASSISTANT.md  CLAUDE.md  README.md  analysis_fed_finetune.md  diagnostic.py  diagnostic_teacher_probe.py  diff.txt  federated_metrics.csv  fedmamba_system_analysis.md  merged_research_memory.md  metrics.csv  patch_script.py  requirements.txt  s11063-025-11823-0.md  scratch_probe.py  train_centralized.py  train_fed_finetune.py  train_fedavg.py  update_inits.py  update_mamba.py
FedMamba_platform/: Phase0.md  (+6 more)
FedMamba_platform/platform/backend/: Dockerfile  celery_worker.py  dev.db  pyproject.toml
FedMamba_platform/platform/backend/alembic/: env.py
FedMamba_platform/platform/backend/alembic/versions/: 4a3e3c0e0e9b_initial_schema.py
FedMamba_platform/platform/backend/app/: config.py  database.py  main.py
FedMamba_platform/platform/backend/app/core/: audit.py  deps.py  fl_config.py  fl_monitor.py  fl_runner.py  output_discovery.py  safe_path.py  security.py
FedMamba_platform/platform/backend/app/models/: __init__.py  audit.py  base.py  checkpoint.py  diagnostic.py  experiment.py  hospital.py  participation.py  patient.py  round.py  user.py
FedMamba_platform/platform/backend/app/schemas/: __init__.py  audit.py  checkpoint.py  experiment.py  hospital.py  patient.py  user.py
FedMamba_platform/platform/backend/app/services/: auth_service.py
FedMamba_platform/platform/backend/app/tasks/: fl_tasks.py
FedMamba_platform/platform/backend/tests/: test_auth.py  test_fl_adapter.py  test_health.py  test_models.py
(+67 files in other folders)
