[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fedmamba-salt-platform"
version = "0.1.0"
description = "FedMamba-SALT Clinical Platform Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic-settings>=2.3.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "timm==0.3.2",
    "einops",
    "PyYAML",
    "matplotlib",
    "tqdm",
    "pandas",
    "seaborn",
    "scikit-image",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
